<resources>
    <string name="app_name">CoMS</string>
    <string name="lbl_username">Username</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_dont_have_an_account_sign_up">Don\'t have an account? sign up</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_fullname">Fullname</string>
    <string name="lbl_confirm_password">Confirm password</string>
    <string name="lbl_already_have_an_account_sign_up">Already have an account? sign in</string>
    <string name="lbl_change_password">Change Password?</string>
    <string name="lbl_manage_package">Manage Package?</string>
    <string name="lbl_phone_number">Phone nummber</string>
    <string name="lbl_birth_day">Birth day</string>
    <string name="lbl_gender">Gender</string>
    <string name="lbl_male">Male</string>
    <string name="lbl_female">Female</string>
    <string name="lbl_old_password">Old password</string>
    <string name="lbl_new_password">New password</string>
    <string name="lbl_past_conference">Past conference</string>
    <string name="lbl_total">Total:</string>
    <string name="lbl_select_your_payment_method">1. Select your Payment method</string>
    <string name="lbl_select_role">2. Select role</string>
    <string name="lbl_select_your_role">Select your role</string>
    <string name="lbl_enter_your_card_details">3. Enter your Card Details</string>
    <string name="lbl_card_number">Card number</string>
    <string name="lbl_expiration_date">Expiration date</string>
    <string name="lbl_ccv_code">CCV Code</string>
    <string name="lbl_month">Month</string>
    <string name="lbl_year">Year</string>
    <string name="lbl_credit_card">Credit card</string>
    <string name="lbl_paypal">Paypal</string>
    <string name="lbl_check">Check</string>
    <string name="lbl_general">General</string>
    <string name="lbl_fresh_app_data">Fresh App Data</string>
    <string name="lbl_notification">Notification</string>
    <string name="lbl_english">English</string>
    <string name="lbl_help_feedback">Help &#38; feedback</string>
    <string name="lbl_support">Support</string>
    <string name="lbl_privacy_policy">Privacy Policy</string>
    <string name="lbl_about_this_app">About This App</string>
    <string name="lbl_version">Version. 1.0.1</string>
    <string name="lbl_schedule">Schedule</string>
    <string name="lbl_my_schedule">My Schedule</string>
    <string name="lbl_location">Location</string>
    <string name="lbl_rate">Rate</string>
    <string name="lbl_conference_name">Đề xuất những sáng kiến về Ung thư và Y học tái tạo</string>
    <string name="lbl_type_of_study">Type of Study</string>
    <string name="lbl_package_name">Package name</string>
    <string name="lbl_time">Time:</string>
    <string name="lbl_conference_type">- Conferecne Type:</string>
    <string name="lbl_field_of_study">- Field of study:</string>
    <string name="lbl_main_theme">- Conference main theme:</string>
    <string name="lbl_con_sess_chair">- Conference session chair:</string>
    <string name="lbl_from_date">- From Date:</string>
    <string name="lbl_thru_date">- Thru Date:</string>
    <string name="lbl_orgazination">Orgazination</string>
    <string name="lbl_orgazination_name">Orgazination Name:</string>
    <string name="lbl_orgazination_code">Orgazination Code:</string>
    <string name="lbl_telephone">Telephone:</string>
    <string name="lbl_emaill">Email:</string>
    <string name="lbl_address">Address:</string>
    <string name="lbl_website">Website:</string>
    <string name="lbl_list_session">List Session</string>
    <string name="lbl_role">Role:</string>
    <string name="lbl_number_of_presentation">- Number of Presentation:</string>
    <string name="lbl_conference_session_topic">- Conference Session Topic:</string>
    <string name="lbl_conference_main_theme">- Conference Main Theme:</string>
    <string name="lbl_description">- Description:</string>
    <string name="lbl_start_datetime">- Start Datetime:</string>
    <string name="lbl_end_datetime">- End Datetime:</string>
    <string name="lbl_venue">- Room:</string>
    <string name="lbl_paper_text_widthdraw">Paper text widthdraw</string>
    <string name="lbl_paper_text_widthdraw_date">Paper text widthdraw date:</string>
    <string name="lbl_paper_text_widthdraw_note">Paper text width draw note:</string>
    <string name="lbl_final_approval_or_rejection">Final approval or rejection of paper text</string>
    <string name="lbl_final_approval_or_rejection_date">Final Approval or Rejection Paper Text Date:</string>
    <string name="lbl_final_assigned_con_sess_topic">Final Assigned Conference Session Topic:</string>
    <string name="lbl_final_approval_type_of_study_name">Final Approval Type of Study Name:</string>
    <string name="lbl_reviewer_name">Reviewer Name:</string>
    <string name="lbl_presenter_name">Presenter Name:</string>
    <string name="lbl_paper_abstract_widthdraw">Paper abstract</string>
    <string name="lbl_paper_text">Paper text</string>
    <string name="lbl_start">Start:</string>
    <string name="lbl_end">End:</string>
    <string name="lbl_presentation_slot">Presentation Slot</string>
    <string name="lbl_feedback">Feedback</string>
    <string name="lbl_comment">Write feedback:</string>
    <string name="lbl_room">Room:</string>
    <string name="lbl_download">Download</string>
    <string name="lbl_attendee">Attendee</string>
    <string name="lbl_des">Description: </string>
    <string name="title_forgot_password">Forgot password</string>
    <string name="title_register">Register</string>
    <string name="title_image">Image</string>
    <string name="title_my_profile">My Profile</string>
    <string name="title_change_password">Change password</string>
    <string name="title_profile">Profile</string>
    <string name="title_message">Message</string>
    <string name="title_bookmark">Bookmark</string>
    <string name="title_package">Package</string>
    <string name="title_checkout">Checkout</string>
    <string name="title_settings">Settings</string>
    <string name="title_new_message">New message</string>
    <string name="title_map">Map</string>
    <string name="title_home">Home</string>
    <string name="title_list_conference">List Conference</string>
    <string name="title_schedule">Schedule</string>
    <string name="title_conference_infomation">Conference Infomation:</string>
    <string name="title_conference_session">Conference Session</string>
    <string name="title_schedule_in_session">Schedule In Conference S</string>
    <string name="title_paper_text">Paper Text</string>
    <string name="title_download_documents">Download Documents</string>
    <string name="title_attendee">Attendee</string>
    <string name="title_floor_map">Floor Map</string>
    <string name="title_notification">Notification</string>
    <string name="msg_to_reset_your_password">To reset your password, type the email address your use login to CoMS.</string>
    <string name="msg_please_enter_username">Please enter username.</string>
    <string name="msg_please_enter_password">Please enter password.</string>
    <string name="msg_sorry_no_internet">Sorry, no Internet connectivity detected. Please reconnect and try again.</string>
    <string name="msg_sorry_an_has_occurred">Sorry an error has occurred.</string>
    <string name="msg_are_you_sure_you_want_to_logout">Are you sure you want to logout.</string>
    <string name="msg_permission_denied_to_write_your_external_storage">Permission denied to write your External storage.</string>
    <string name="msg_permission_denied_to_read_your_external_storage">Permission denied to read your External storage.</string>
    <string name="msg_please_enter_full_name">Please enter full name.</string>
    <string name="msg_please_enter_phone_number">Please enter phone number.</string>
    <string name="msg_please_enter_birth_day">Please enter birth day.</string>
    <string name="msg_please_select_gender">Please select gender.</string>
    <string name="msg_please_enter_email">Please enter email.</string>
    <string name="msg_please_enter_confirm_password">Please enter confirm password.</string>
    <string name="msg_email_invalid">Email invalid.</string>
    <string name="msg_username_must_not_be_less_than_6_characters">Username must not be less than 6 characters.</string>
    <string name="msg_password_must_not_be_less_than_6_characters">Password must not be less than 6 characters.</string>
    <string name="msg_confirm_password_incorrect">Confirm password incorrect.</string>
    <string name="msg_add_bookmark_success">Add bookmark success.</string>
    <string name="msg_delete_bookmark_success">Delete bookmark success.</string>
    <string name="msg_no_data_yet">No data yet.</string>
    <string name="msg_no_data_bookmark">No data bookmark.</string>
    <string name="msg_no_data_person">No data person.</string>
    <string name="msg_are_you_sure_you_want_to_delete_all_message">Are you sure you want to delete all message.</string>
    <string name="msg_are_you_sure_you_want_to_delete_all_notification">Are you sure you want to delete all notification.</string>
    <string name="msg_no_data_message">No data message.</string>
    <string name="msg_no_data_package">No data package.</string>
    <string name="msg_no_data_map">No data map.</string>
    <string name="msg_please_log_in_again">Please sign in again.</string>
    <string name="msg_connection_timed_please_log_in_again">Connection time out. Please login again.</string>
    <string name="msg_connection_time_out_please_try_again">Connection time out. Please try again.</string>
    <string name="msg_birth_date_is_not_greater_than_the">Birth date is not greater than the current date.</string>
    <string name="msg_your_password_has_been_changed">Your password has been changed. Please check your email.</string>
    <string name="msg_change_password_sucess">Change password success.</string>
    <string name="msg_update_profile_success">Update profile success.</string>
    <string name="msg_can_not_load_map">Can not load map.</string>
    <string name="msg_no_data_notification">No data notification.</string>
    <string name="msg_sory_data_is_empty">Sorry, data is empty.</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_confirm">Confirm</string>
    <string name="btn_ok">OKE</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_reset">Reset</string>
    <string name="hint_type_message">Type message</string>
    <string name="menu_take_photo">Take photo</string>
    <string name="menu_select_photo">Select photo</string>
    <string name="menu_edit_profile">Edit profile</string>
    <string name="menu_chat">Chat</string>
    <string name="menu_bookmark">Bookmark</string>
    <string name="menu_clear_all">Clear all</string>
    <string name="menu_view_profile">View profile</string>
    <string name="menu_search">Search</string>
    <string name="menu_delete_notification">Delete notification</string>
    <string name="font_nunito_bold">Nunito-Bold.ttf</string>
    <string name="font_nunito_regular">Nunito-Regular.ttf</string>
    <string name="font_roboto_regular">Roboto-Regular.ttf</string>
    <string name="nav_home">Trang chủ</string>
    <string name="nav_notification">Thông báo</string>
    <string name="nav_schedule">Lịch hội nghị</string>
    <string name="nav_setting">Cài đặt</string>
    <string name="nav_logout">Đăng xuất</string>
    <string name="nav_message">Tin nhắn</string>
    <string name="nav_profile">Hồ sơ</string>
    <string name="nav_conference">Hội nghị</string>
    <string name="nav_reviews">Đánh giá</string>
    <string name="nav_list_abstract">Danh sách bài tóm tắt</string>
    <string name="nav_login">Đăng nhập</string>
</resources>