<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/user"
        android:checkableBehavior="single"
        >
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_navigation_home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_navigation_schedule"
            android:title="@string/nav_schedule" />
        <item
            android:id="@+id/nav_conference"
            android:icon="@drawable/ic_conference"
            android:title="@string/nav_conference"
            />

        <!-- user reviewer -->
        <item
            android:visible="false"
            android:id="@+id/nav_reviews"
            android:icon="@drawable/ic_review"
            android:title="@string/nav_reviews"
            />

        <!-- user author -->
        <item
            android:id="@+id/nav_list_abstract"
            android:icon="@drawable/ic_list_abstract"
            android:title="@string/nav_list_abstract"
            />
        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/ic_navigation_notification"
            android:title="@string/nav_notification" />

        <item
            android:id="@+id/nav_message"
            android:icon="@drawable/ic_message"
            android:title="@string/nav_message"
            />

    </group>

    <group
        android:id="@+id/menu_bottom"
        >
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_account_circle"
            android:title="@string/nav_login" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_account_circle"
            android:title="@string/nav_profile" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_navigation_settings"
            android:title="@string/nav_setting" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_navigation_logout"
            android:title="@string/nav_logout" />
    </group>
</menu>
