<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_marginBottom="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#f2f2f2"
                android:gravity="center">

                <cse.duytan.coms.customviews.CustomTextView
                    android:id="@+id/tvNameConInAc"
                    style="@style/tvBlack16"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="8dp"
                    android:gravity="center|left"
                    android:textAllCaps="true"
                    app:typeFace="@string/font_nunito_regular" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <cse.duytan.coms.customviews.CustomTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_conference_type"
                        app:typeFace="@string/font_nunito_regular" />

                    <cse.duytan.coms.customviews.CustomTextView
                        android:id="@+id/tvConferenceTpye"
                        style="@style/tvBlack14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        app:typeFace="@string/font_nunito_regular" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <cse.duytan.coms.customviews.CustomTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_field_of_study"
                        app:typeFace="@string/font_nunito_regular" />

                    <cse.duytan.coms.customviews.CustomTextView
                        android:id="@+id/tvFieldOfStudy"
                        style="@style/tvBlack14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        app:typeFace="@string/font_nunito_regular" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <cse.duytan.coms.customviews.CustomTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_main_theme"
                        app:typeFace="@string/font_nunito_regular" />

                    <cse.duytan.coms.customviews.CustomTextView
                        android:id="@+id/tvMainTheme"
                        style="@style/tvBlack14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <cse.duytan.coms.customviews.CustomTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_from_date"
                        app:typeFace="@string/font_nunito_regular" />

                    <cse.duytan.coms.customviews.CustomTextView
                        android:id="@+id/tvFromDateInAc"
                        style="@style/tvBlack14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        app:typeFace="@string/font_nunito_regular" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <cse.duytan.coms.customviews.CustomTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_thru_date"
                        app:typeFace="@string/font_nunito_regular" />

                    <cse.duytan.coms.customviews.CustomTextView
                        android:id="@+id/tvThruDateInAc"
                        style="@style/tvBlack14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        app:typeFace="@string/font_nunito_regular" />
                </LinearLayout>


            </LinearLayout>

            <RelativeLayout
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#f2f2f2">

                <cse.duytan.coms.customviews.CustomTextView
                    style="@style/tvBlack16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/lbl_orgazination"
                    android:textAllCaps="true"
                    app:typeFace="@string/font_nunito_regular" />
            </RelativeLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvOrganization"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="-1dp"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#f2f2f2">

                <cse.duytan.coms.customviews.CustomTextView
                    style="@style/tvBlack16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/lbl_list_session"
                    android:textAllCaps="true"
                    app:typeFace="@string/font_nunito_regular" />
            </RelativeLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvConSess"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
